# python-course

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run  setup.cfg
.github/workflows/: tests.yml
conf/: config.json
hw2/: inc.patch  init  new_opcode.patch  until.patch
hw3/: api.py  test_api.py
hw3-1/: api.py  scoring.py  store.py  test_api.py
hw3-1/tests/: utils.py
hw3-1/tests/integration/: test_get_interests.py  test_online_score.py  test_store.py
hw3-1/tests/unit/: test_fields.py  test_store.py
reports/: report-2017.06.30.html
src/: deco.py  log_analyzer.py  poker.py
src/hw3/: api.py  scoring.py  test.py
templates/: report.html
tests/: test_api.py  test_log_analyzer.py  test_poetry_demo.py
