[tool.poetry]
name = "python-course"
version = "0.1.0"
description = ""
authors = ["Tatiana Vakhrameeva <tvakhrameeva@lineate.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
