[tool.poetry]
name = "python-course"
version = "0.1.0"
description = ""
authors = ["Tatiana Vakhrameeva <tvakhrameeva@lineate.com>"]

[tool.poetry.dependencies]
python = "^3.10"
redis = "4.3.1"

[tool.poetry.dev-dependencies]
flake8 = "4.0.1"
black = "22.1.0"
pre-commit = "2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
